// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> when autoFocus should render correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-switch vd-switch--small"
  >
    <input
      autoFocus={true}
      className="vd-switch-input"
      type="checkbox"
    />
    <div
      className="vd-switch-track"
    >
      <i
        className="fa fa-check vd-switch-icon"
      />
      <i
        className="fa fa-times vd-cross-icon"
      />
      <div
        className="vd-switch-track-knob"
      />
    </div>
  </div>
</div>
`;

exports[`<Switch /> when checked should render correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-switch vd-switch--small"
  >
    <input
      checked={true}
      className="vd-switch-input"
      type="checkbox"
    />
    <div
      className="vd-switch-track"
    >
      <i
        className="fa fa-check vd-switch-icon"
      />
      <i
        className="fa fa-times vd-cross-icon"
      />
      <div
        className="vd-switch-track-knob"
      />
    </div>
  </div>
</div>
`;

exports[`<Switch /> when disabled should render correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-switch vd-switch--small"
  >
    <input
      className="vd-switch-input"
      disabled={true}
      type="checkbox"
    />
    <div
      className="vd-switch-track"
    >
      <i
        className="fa fa-check vd-switch-icon"
      />
      <i
        className="fa fa-times vd-cross-icon"
      />
      <div
        className="vd-switch-track-knob"
      />
    </div>
  </div>
</div>
`;

exports[`<Switch /> when empty props should render correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-switch vd-switch--small"
  >
    <input
      className="vd-switch-input"
      type="checkbox"
    />
    <div
      className="vd-switch-track"
    >
      <i
        className="fa fa-check vd-switch-icon"
      />
      <i
        className="fa fa-times vd-cross-icon"
      />
      <div
        className="vd-switch-track-knob"
      />
    </div>
  </div>
</div>
`;

exports[`<Switch /> when id, name should render correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-switch vd-switch--small"
  >
    <input
      className="vd-switch-input"
      id="feature1-id"
      name="feature1"
      type="checkbox"
    />
    <div
      className="vd-switch-track"
    >
      <i
        className="fa fa-check vd-switch-icon"
      />
      <i
        className="fa fa-times vd-cross-icon"
      />
      <div
        className="vd-switch-track-knob"
      />
    </div>
  </div>
</div>
`;

exports[`<Switch /> when passing data-props should render correctly 1`] = `
<div
  className="css-1efsrtw-Box emotion-0"
>
  <div
    className="vd-switch vd-switch--small"
  >
    <input
      className="vd-switch-input"
      data-property1={true}
      type="checkbox"
    />
    <div
      className="vd-switch-track"
    >
      <i
        className="fa fa-check vd-switch-icon"
      />
      <i
        className="fa fa-times vd-cross-icon"
      />
      <div
        className="vd-switch-track-knob"
      />
    </div>
  </div>
</div>
`;
